--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
                 I'm Duy Pham.
             </h1>
             <p>I'm a Ho Chi Minh City based
-                <strong>Android Developer
-                </strong>
-                , currently working at
+                <strong>Android Developer</strong>, currently working at
                 <strong>
                     Fossil Vietnam
                 </strong> helping build a cutting-edge wearables framework for
@@ -34,8 +32,7 @@
                 🐺, immersed in
                 <strong>
                     a good book
-                </strong>
-                , or cycling through the beautiful streets of
+                </strong>, or cycling through the beautiful streets of
                 <strong>
                     SaiGon
                 </strong>.
